trunk/Archive2/f9/703f181ac1e51a/main.cpp
#include <type_traits>
struct foo {

    template<class T>
	foo(T , typename std::enable_if<std::is_integral<T>::value>::type * = nullptr) { }
	template<class T>
	foo(T , typename std::enable_if<std::is_floating_point<T>::value>::type * = nullptr) { }
};

struct bar : foo {
	using foo::foo;
};

int main() { }